--- a/EpicSchoolHomework/Views/EditItem/EditItemViewController.xib
+++ b/EpicSchoolHomework/Views/EditItem/EditItemViewController.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,13 +15,14 @@
                 <outlet property="centerMapLabel" destination="9Kl-yJ-A5V" id="QAP-0E-2MJ"/>
                 <outlet property="descriptionTextField" destination="0zm-qC-zi7" id="Z7K-IJ-qdf"/>
                 <outlet property="distanceLabel" destination="xoU-qN-dSU" id="6zW-Nx-c2d"/>
+                <outlet property="favoriteImageView" destination="dM3-Ui-Lbk" id="ssS-Vx-id1"/>
                 <outlet property="imageLoadingIndicator" destination="6CY-Ar-b2d" id="4uK-ha-XZh"/>
                 <outlet property="isVisitedStackView" destination="WIj-ZB-ts9" id="lg2-nS-SZX"/>
+                <outlet property="likedImageView" destination="S43-W1-pyV" id="h8U-Be-lDp"/>
                 <outlet property="mapView" destination="Jme-On-CIZ" id="KFI-6o-qCS"/>
                 <outlet property="photoImageView" destination="eOP-M4-7A9" id="OOm-bL-Nrd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="visitedSwitch" destination="0W5-ae-ALU" id="NCj-uD-twj"/>
-                <outlet property="visitedSwitchLabel" destination="LOR-UO-PzD" id="Dvc-mC-wI0"/>
+                <outlet property="visitedImageView" destination="TBr-rc-aa3" id="Kyg-MN-EcO"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -35,39 +37,42 @@
                     <rect key="frame" x="188.5" y="205.5" width="37" height="37"/>
                 </activityIndicatorView>
                 <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Jme-On-CIZ">
-                    <rect key="frame" x="20" y="453" width="374" height="360"/>
+                    <rect key="frame" x="20" y="453" width="374" height="361"/>
                 </mapView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xoU-qN-dSU" userLabel="Distance">
+                    <rect key="frame" x="30" y="463" width="31" height="14.5"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                    <color key="textColor" systemColor="secondaryLabelColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Kl-yJ-A5V" userLabel="center map">
-                    <rect key="frame" x="198" y="615" width="18.5" height="36"/>
+                    <rect key="frame" x="198" y="615.5" width="18.5" height="36"/>
                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="30"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="WIj-ZB-ts9">
-                    <rect key="frame" x="20" y="821" width="374" height="31"/>
+                    <rect key="frame" x="20" y="822" width="374" height="30"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="Wgo-gG-GmU">
-                            <rect key="frame" x="0.0" y="0.0" width="374" height="31"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="Wgo-gG-GmU">
+                            <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xoU-qN-dSU" userLabel="Distance">
-                                    <rect key="frame" x="0.0" y="0.0" width="215" height="31"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <color key="textColor" systemColor="secondaryLabelColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Посещено" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LOR-UO-PzD">
-                                    <rect key="frame" x="228" y="0.0" width="84" height="31"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" title="Посещено" translatesAutoresizingMaskIntoConstraints="NO" id="0W5-ae-ALU" userLabel="Visited">
-                                    <rect key="frame" x="325" y="0.0" width="51" height="31"/>
-                                    <connections>
-                                        <action selector="visitedSwitched:" destination="-1" eventType="valueChanged" id="0Xt-Uc-ukh"/>
-                                    </connections>
-                                </switch>
+                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S43-W1-pyV" userLabel="liked">
+                                    <rect key="frame" x="0.0" y="-1.5" width="116" height="33.5"/>
+                                    <imageReference key="image" image="heart" catalog="system" symbolScale="large"/>
+                                </imageView>
+                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dM3-Ui-Lbk" userLabel="favorite">
+                                    <rect key="frame" x="129" y="-4.5" width="116" height="37"/>
+                                    <imageReference key="image" image="star" catalog="system" symbolScale="large"/>
+                                </imageView>
+                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TBr-rc-aa3" userLabel="visited">
+                                    <rect key="frame" x="258" y="-1.5" width="116" height="32.5"/>
+                                    <imageReference key="image" image="eye" catalog="system" symbolScale="large"/>
+                                </imageView>
                             </subviews>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="mR8-kb-EJY"/>
+                            </constraints>
                         </stackView>
                     </subviews>
                 </stackView>
@@ -92,17 +97,22 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eOP-M4-7A9" secondAttribute="trailing" constant="20" id="Yc4-tW-6Jl"/>
                 <constraint firstItem="9Kl-yJ-A5V" firstAttribute="centerY" secondItem="Jme-On-CIZ" secondAttribute="centerY" id="ZGy-gi-rBL"/>
                 <constraint firstItem="6CY-Ar-b2d" firstAttribute="centerY" secondItem="eOP-M4-7A9" secondAttribute="centerY" id="aKd-aM-Gbs"/>
+                <constraint firstItem="xoU-qN-dSU" firstAttribute="top" secondItem="Jme-On-CIZ" secondAttribute="top" constant="10" id="d3V-pG-Ojb"/>
                 <constraint firstItem="eOP-M4-7A9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="dxd-y9-8JM"/>
                 <constraint firstItem="Jme-On-CIZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="fqM-CS-DPL"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="0zm-qC-zi7" secondAttribute="trailing" constant="20" id="fzP-vY-meq"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="WIj-ZB-ts9" secondAttribute="bottom" constant="10" id="ldt-XR-fIx"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Jme-On-CIZ" secondAttribute="trailing" constant="20" id="oKa-Ia-fla"/>
+                <constraint firstItem="xoU-qN-dSU" firstAttribute="leading" secondItem="Jme-On-CIZ" secondAttribute="leading" constant="10" id="qmo-F9-AII"/>
                 <constraint firstItem="Jme-On-CIZ" firstAttribute="top" secondItem="0zm-qC-zi7" secondAttribute="bottom" constant="7" id="t4C-To-G2X"/>
             </constraints>
             <point key="canvasLocation" x="137.68115942028987" y="113.83928571428571"/>
         </view>
     </objects>
     <resources>
+        <image name="eye" catalog="system" width="128" height="81"/>
+        <image name="heart" catalog="system" width="128" height="109"/>
+        <image name="star" catalog="system" width="128" height="116"/>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
