--- a/EpicSchoolHomework/Views/EditItem/EditItemViewController.xib
+++ b/EpicSchoolHomework/Views/EditItem/EditItemViewController.xib
@@ -17,7 +17,6 @@
                 <outlet property="distanceLabel" destination="xoU-qN-dSU" id="6zW-Nx-c2d"/>
                 <outlet property="favoriteImageView" destination="dM3-Ui-Lbk" id="ssS-Vx-id1"/>
                 <outlet property="imageLoadingIndicator" destination="6CY-Ar-b2d" id="4uK-ha-XZh"/>
-                <outlet property="isVisitedStackView" destination="WIj-ZB-ts9" id="lg2-nS-SZX"/>
                 <outlet property="likedImageView" destination="S43-W1-pyV" id="h8U-Be-lDp"/>
                 <outlet property="mapView" destination="Jme-On-CIZ" id="KFI-6o-qCS"/>
                 <outlet property="photoImageView" destination="eOP-M4-7A9" id="OOm-bL-Nrd"/>
@@ -37,7 +36,7 @@
                     <rect key="frame" x="188.5" y="205.5" width="37" height="37"/>
                 </activityIndicatorView>
                 <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Jme-On-CIZ">
-                    <rect key="frame" x="20" y="453" width="374" height="361"/>
+                    <rect key="frame" x="20" y="453" width="374" height="389"/>
                 </mapView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xoU-qN-dSU" userLabel="Distance">
                     <rect key="frame" x="30" y="463" width="31" height="14.5"/>
@@ -46,35 +45,30 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Kl-yJ-A5V" userLabel="center map">
-                    <rect key="frame" x="198" y="615.5" width="18.5" height="36"/>
+                    <rect key="frame" x="198" y="629.5" width="18.5" height="36"/>
                     <fontDescription key="fontDescription" type="system" weight="thin" pointSize="30"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="WIj-ZB-ts9">
-                    <rect key="frame" x="20" y="822" width="374" height="30"/>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="Wgo-gG-GmU">
+                    <rect key="frame" x="20" y="414" width="374" height="20"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="Wgo-gG-GmU">
-                            <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
-                            <subviews>
-                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S43-W1-pyV" userLabel="liked">
-                                    <rect key="frame" x="0.0" y="-1.5" width="116" height="33.5"/>
-                                    <imageReference key="image" image="heart" catalog="system" symbolScale="large"/>
-                                </imageView>
-                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dM3-Ui-Lbk" userLabel="favorite">
-                                    <rect key="frame" x="129" y="-4.5" width="116" height="37"/>
-                                    <imageReference key="image" image="star" catalog="system" symbolScale="large"/>
-                                </imageView>
-                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TBr-rc-aa3" userLabel="visited">
-                                    <rect key="frame" x="258" y="-1.5" width="116" height="32.5"/>
-                                    <imageReference key="image" image="eye" catalog="system" symbolScale="large"/>
-                                </imageView>
-                            </subviews>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="mR8-kb-EJY"/>
-                            </constraints>
-                        </stackView>
+                        <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S43-W1-pyV" userLabel="liked">
+                            <rect key="frame" x="0.0" y="-1.5" width="116" height="23.5"/>
+                            <imageReference key="image" image="heart" catalog="system" symbolScale="large"/>
+                        </imageView>
+                        <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dM3-Ui-Lbk" userLabel="favorite">
+                            <rect key="frame" x="129" y="-4.5" width="116" height="27"/>
+                            <imageReference key="image" image="star" catalog="system" symbolScale="large"/>
+                        </imageView>
+                        <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TBr-rc-aa3" userLabel="visited">
+                            <rect key="frame" x="258" y="-1.5" width="116" height="22.5"/>
+                            <imageReference key="image" image="eye" catalog="system" symbolScale="large"/>
+                        </imageView>
                     </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="mR8-kb-EJY"/>
+                    </constraints>
                 </stackView>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Название (обязательно)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0zm-qC-zi7">
                     <rect key="frame" x="20" y="412" width="374" height="34"/>
@@ -85,15 +79,15 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="WIj-ZB-ts9" secondAttribute="trailing" constant="20" id="1bY-EG-XSH"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Jme-On-CIZ" secondAttribute="bottom" constant="20" id="245-HM-KwT"/>
                 <constraint firstItem="0zm-qC-zi7" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="2Cn-05-Esh"/>
                 <constraint firstItem="0zm-qC-zi7" firstAttribute="top" secondItem="eOP-M4-7A9" secondAttribute="bottom" constant="8" symbolic="YES" id="2Nf-by-JHU"/>
                 <constraint firstItem="9Kl-yJ-A5V" firstAttribute="centerX" secondItem="Jme-On-CIZ" secondAttribute="centerX" id="2rk-dF-TMO"/>
                 <constraint firstItem="Jme-On-CIZ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="CYu-Td-wwG"/>
-                <constraint firstItem="WIj-ZB-ts9" firstAttribute="top" secondItem="Jme-On-CIZ" secondAttribute="bottom" constant="8" symbolic="YES" id="KqZ-g1-Ach"/>
+                <constraint firstItem="Wgo-gG-GmU" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="D8P-oJ-BYX"/>
                 <constraint firstItem="6CY-Ar-b2d" firstAttribute="centerX" secondItem="eOP-M4-7A9" secondAttribute="centerX" id="QA2-a7-bKF"/>
-                <constraint firstItem="WIj-ZB-ts9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="U1g-Tn-v8Y"/>
                 <constraint firstItem="eOP-M4-7A9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Uf0-Lb-N03"/>
+                <constraint firstItem="Wgo-gG-GmU" firstAttribute="top" secondItem="eOP-M4-7A9" secondAttribute="bottom" constant="10" id="Vnk-x9-cgs"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eOP-M4-7A9" secondAttribute="trailing" constant="20" id="Yc4-tW-6Jl"/>
                 <constraint firstItem="9Kl-yJ-A5V" firstAttribute="centerY" secondItem="Jme-On-CIZ" secondAttribute="centerY" id="ZGy-gi-rBL"/>
                 <constraint firstItem="6CY-Ar-b2d" firstAttribute="centerY" secondItem="eOP-M4-7A9" secondAttribute="centerY" id="aKd-aM-Gbs"/>
@@ -101,7 +95,7 @@
                 <constraint firstItem="eOP-M4-7A9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="dxd-y9-8JM"/>
                 <constraint firstItem="Jme-On-CIZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="fqM-CS-DPL"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="0zm-qC-zi7" secondAttribute="trailing" constant="20" id="fzP-vY-meq"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="WIj-ZB-ts9" secondAttribute="bottom" constant="10" id="ldt-XR-fIx"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Wgo-gG-GmU" secondAttribute="trailing" constant="20" id="ldO-hM-NGi"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Jme-On-CIZ" secondAttribute="trailing" constant="20" id="oKa-Ia-fla"/>
                 <constraint firstItem="xoU-qN-dSU" firstAttribute="leading" secondItem="Jme-On-CIZ" secondAttribute="leading" constant="10" id="qmo-F9-AII"/>
                 <constraint firstItem="Jme-On-CIZ" firstAttribute="top" secondItem="0zm-qC-zi7" secondAttribute="bottom" constant="7" id="t4C-To-G2X"/>
